2006-09-29  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: 
	(find_insertion_place): removed XXX comment.
	Little cleanup before rewriting update_syntax().

2006-09-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: added is_start
	flag to segments: fixed the bug with multi-line contexts, 
	when start of a context erroneously became end of new context,
	breaking sh highlighting. Added more docs.
	* gtksourceview/gtksourcelanguage-parser-2.c: 
	(_gtk_source_language_file_parse_version2): do not ignore
	return value of _gtk_source_context_engine_resolve_refs.
	* gtksourceview/language-specs/c.lang: added 'warning' to
	the list of preprocessor directives.

2006-09-10  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/libegg/regex/pcre/pcre.h: removed win32 DLL_EXPORT
	stuff. It broke windows build, and we are not exporting pcre symbols 
	anyway.
	* gtksourceview/gtksourcecontextengine.[ch]: implemented two-phase
	parsing for context references. Modified DefinitionChild structure
	to keep context id or definition; moved context style to it to
	remove a need to copy contexts (copying contexts was introduced for
	overriding styles); modifed lot of functions to accept DefinitionChild
	instead of ContextDefinition, so style and everything are correct.
	* gtksourceview/gtksourcelanguage-parser-2.c: (hopefully) made XML
	error handler work; added call to _gtk_source_context_engine_resolve_refs.

2006-09-06  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sh.lang: renamed line-comment
	to "comment".
	* gtksourceview/language-specs/m4.lang: added dnl comment.

2006-09-06  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage.c,
	gtksourceview/gtksourcelanguage-private.h,
	gtksourceview/language-specs/c.lang
	gtksourceview/language-specs/cpp.lang
	gtksourceview/language-specs/language2.rng
	gtksourceview/language-specs/yacc.lang: removed brackets too.
